Commit para Sebitas el pituquito

--- a/apps/invoice/templates/app_invoice_list.html
+++ b/apps/invoice/templates/app_invoice_list.html
@@ -24,9 +24,9 @@
 {% endblock page_js %}
 
 {% block content %}
-<h4 class="py-3 mb-4">
+{% comment %} <h4 class="py-3 mb-4">
   <span class="text-muted fw-light">{% translate "Invoice" %} /</span> {% translate "List" %}
-</h4>
+</h4> {% endcomment %}
 
 <!-- Invoice List Widget -->
 
