--- a/templates/layout/partials/menu/vertical/vertical_menu.html
+++ b/templates/layout/partials/menu/vertical/vertical_menu.html
@@ -2,17 +2,12 @@
   <!-- ! Hide app brand if navbar-full -->
   {% if not navbar_full %}
   <div class="app-brand demo">
-    <a href="{% url 'index' %}" class="app-brand-link">
-      <span class="app-brand-logo demo">
-        {% include 'partials/logo.html' %}
-      </span>
-      <span class="app-brand-text demo menu-text fw-bold ms-2">{% get_theme_variables 'template_name' %}</span>
-    </a>
+    <img src="{% static 'img/avatars/AIVendo.png' %}" alt="imagen" width="220" height="45">
 
-    <a href="javascript:void(0);" class="layout-menu-toggle menu-link text-large ms-auto">
+    {% comment %} <a href="javascript:void(0);" class="layout-menu-toggle menu-link text-large ms-auto">
       <i class="ti menu-toggle-icon d-none d-xl-block ti-sm align-middle"></i>
       <i class="ti ti-x d-block d-xl-none ti-sm align-middle"></i>
-    </a>
+    </a> {% endcomment %}
   </div>
   {% endif %}
 
